Separated the "usage" instructions in a text file, embedded as "resource".
Also:
* I added a couple of "qFatal" where it makes sense.
* Usage now mentions the fact that the input files that finish by ".coffee" are also acceptable

--- a/src/phantomjs.qrc
+++ b/src/phantomjs.qrc
@@ -2,5 +2,6 @@
     <qresource prefix="/">
         <file>phantomjs-icon.png</file>
         <file>coffee-script.js</file>
+        <file>usage.txt</file>
     </qresource>
 </RCC>
