Store bootstrap code in its own file.

--- a/src/phantomjs.qrc
+++ b/src/phantomjs.qrc
@@ -3,5 +3,6 @@
         <file>phantomjs-icon.png</file>
         <file>coffee-script.js</file>
         <file>usage.txt</file>
+        <file>bootstrap.js</file>
     </qresource>
 </RCC>
