--- a/src/phantomjs.qrc
+++ b/src/phantomjs.qrc
@@ -4,5 +4,6 @@
         <file>coffee-script.js</file>
         <file>usage.txt</file>
         <file>bootstrap.js</file>
+        <file>configurator.js</file>
     </qresource>
 </RCC>
