Refactored the JS Shims to be isolated in their own file.
Also, refactored some "too cautious" code to load the shim.

PS I don't grasp 100% the point of "Terminal". Wouldn't qDebug() be enough? What am I missing?

--- a/src/phantomjs.qrc
+++ b/src/phantomjs.qrc
@@ -3,7 +3,8 @@
         <file>phantomjs-icon.png</file>
         <file>coffee-script.js</file>
         <file>usage.txt</file>
-        <file>bootstrap.js</file>
+        <file>webpage-shim.js</file>
+        <file>fs-shim.js</file>
         <file>configurator.js</file>
     </qresource>
 </RCC>
