--- a/python/pyphantomjs/resources.qrc
+++ b/python/pyphantomjs/resources.qrc
@@ -1,6 +1,7 @@
 <RCC>
     <qresource prefix="/">
-        <file>bootstrap.js</file>
+        <file>fs-shim.js</file>
+        <file>webpage-shim.js</file>
         <file>resources/pyphantomjs-icon.png</file>
         <file>resources/coffee-script.js</file>
     </qresource>
