--- a/src/phantomjs.qrc
+++ b/src/phantomjs.qrc
@@ -4,7 +4,7 @@
         <file>coffee-script.js</file>
         <file>usage.txt</file>
         <file>webpage-shim.js</file>
-        <file>fs-shim.js</file>
+        <file>filesystem-shim.js</file>
         <file>configurator.js</file>
     </qresource>
 </RCC>
