--- a/python/pyphantomjs/resources.qrc
+++ b/python/pyphantomjs/resources.qrc
@@ -1,7 +1,7 @@
 <RCC>
     <qresource prefix="/">
         <file>configurator.js</file>
-        <file>fs-shim.js</file>
+        <file>filesystem-shim.js</file>
         <file>webpage-shim.js</file>
         <file>resources/coffee-script.js</file>
         <file>resources/pyphantomjs-icon.png</file>
