Introducing CommonJS API Modules.
* Provides the global method 'require('moduleId')'
* Updated the tests to fix the initialisation of 'webpage' and 'fs'
* Updated the examples (hopefully I didn't miss any)
* Updated the 'Changelog'

NOTES
* I consider this as a first good step towards a complete solution

--- a/src/phantomjs.qrc
+++ b/src/phantomjs.qrc
@@ -3,8 +3,9 @@
         <file>phantomjs-icon.png</file>
         <file>coffee-script.js</file>
         <file>usage.txt</file>
-        <file>webpage-shim.js</file>
-        <file>filesystem-shim.js</file>
         <file>configurator.js</file>
+        <file>builtin-modules/filesystem.js</file>
+        <file>builtin-modules/webpage.js</file>
+        <file>phantom-shim.js</file>
     </qresource>
 </RCC>
