Implement require('fs').
This is mostly based on Ivan's work, see
https://github.com/ariya/phantomjs/pull/153

http://code.google.com/p/phantomjs/issues/detail?id=47

--- a/src/phantomjs.qrc
+++ b/src/phantomjs.qrc
@@ -4,7 +4,7 @@
         <file>coffee-script.js</file>
         <file>usage.txt</file>
         <file>webpage-shim.js</file>
-        <file>filesystem-shim.js</file>
+        <file>bootstrap.js</file>
         <file>configurator.js</file>
     </qresource>
 </RCC>
