--- a/src/phantomjs.qrc
+++ b/src/phantomjs.qrc
@@ -5,5 +5,7 @@
         <file>usage.txt</file>
         <file>bootstrap.js</file>
         <file>configurator.js</file>
+        <file>modules/webpage.js</file>
+        <file>modules/fs.js</file>
     </qresource>
 </RCC>
