--- a/python/pyphantomjs/resources.qrc
+++ b/python/pyphantomjs/resources.qrc
@@ -2,6 +2,8 @@
     <qresource prefix="/">
         <file>bootstrap.js</file>
         <file>configurator.js</file>
+        <file>modules/fs.js</file>
+        <file>modules/webpage.js</file>
         <file>resources/coffee-script.js</file>
         <file>resources/pyphantomjs-icon.png</file>
     </qresource>
