Add initial remote debugging support. Use --remote-debugger-port= to turn it on.
You'll need to connect with a browser build with qtwebkit-2.2 most likely.

--- a/src/phantomjs.qrc
+++ b/src/phantomjs.qrc
@@ -1,6 +1,7 @@
 <RCC>
     <qresource prefix="/">
         <file>debug_harness.html</file>
+        <file>debug_wrapper.js</file>
         <file>phantomjs-icon.png</file>
         <file>coffee-script.js</file>
         <file>usage.txt</file>
