--- a/src/phantomjs.qrc
+++ b/src/phantomjs.qrc
@@ -7,6 +7,7 @@
         <file>bootstrap.js</file>
         <file>configurator.js</file>
         <file>modules/webpage.js</file>
+        <file>modules/webserver.js</file>
         <file>modules/fs.js</file>
     </qresource>
 </RCC>
