--- a/src/phantomjs.qrc
+++ b/src/phantomjs.qrc
@@ -1,7 +1,6 @@
 <RCC>
     <qresource prefix="/">
-        <file>debug_harness.html</file>
-        <file>debug_wrapper.js</file>
+        <file>remote_debugger_harness.html</file>
         <file>phantomjs-icon.png</file>
         <file>coffee-script.js</file>
         <file>usage.txt</file>
