Implement the plumbing for CommonJS System module support.
See http://wiki.commonjs.org/wiki/System.

Based on the initial work from execjosh:
https://github.com/ariya/phantomjs/pull/192

http://code.google.com/p/phantomjs/issues/detail?id=270

--- a/src/phantomjs.qrc
+++ b/src/phantomjs.qrc
@@ -9,6 +9,7 @@
         <file>modules/webpage.js</file>
         <file>modules/webserver.js</file>
         <file>modules/fs.js</file>
+        <file>modules/system.js</file>
         <file>repl.js</file>
     </qresource>
 </RCC>
