--- a/_layouts/document.html
+++ b/_layouts/document.html
@@ -12,19 +12,15 @@
   <link href="http://fonts.googleapis.com/css?family=Droid+Sans:400,700" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="{{ site.url }}/css/main.css">
 
-  <!-- @TODO: Allow indexing if/when implemented by project -->
-  <meta name="robots" content="noindex,nofollow"/>
-
-  <!-- @TODO: Restore analytics if/when implemented by project -->
   <script>
-    // var _gaq = _gaq || [];
-    // _gaq.push(['_setAccount', 'UA-21665893-1']);
-    // _gaq.push(['_trackPageview']);
-    // (function() {
-    // var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    // ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    // var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-    // })();
+    var _gaq = _gaq || [];
+    _gaq.push(['_setAccount', 'UA-21665893-1']);
+    _gaq.push(['_trackPageview']);
+    (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+    })();
   </script>
 </head>
 <body>
