add external libs

--- a/src/phantomjs.qrc
+++ b/src/phantomjs.qrc
@@ -6,6 +6,7 @@
         <file>configurator.js</file>
         <file>modules/webpage.js</file>
         <file>modules/webserver.js</file>
+        <file>modules/systemlibs.js</file>
         <file>modules/fs.js</file>
         <file>modules/system.js</file>
         <file>modules/child_process.js</file>
