Adjust padding for code snippets

--- a/sass/_solarized-light.scss
+++ b/sass/_solarized-light.scss
@@ -7,7 +7,7 @@ code {
 
 .highlight {
   border: 1px solid #ddd;
-  padding: 1em 1em 0 1em;
+  padding: 1em 1em 1em 1em;
   margin: 20px 0 20px 0;
   overflow: auto;
 }
