--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,5 +8,6 @@
     <li><a href="{{ site.url }}/api">API</a></li>
     <li><a href="{{ site.url }}/examples">Examples</a></li>
     <li><a href="{{ site.url }}/faq.html">FAQ</a></li>
+    <li><a href="http://gobb.pl">Forum</a></li>
   </ul>
 </div>
