--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,6 +7,6 @@
     <li><a href="{{ site.url }}/documentation">Documentation</a></li>
     <li><a href="{{ site.url }}/api">API</a></li>
     <li><a href="{{ site.url }}/examples">Examples</a></li>
-    <li><a href="52.206.31.90">Forum</a></li>
+    <li><a href="http://52.206.31.90">Forum</a></li>
   </ul>
 </div>
