--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,8 +19,8 @@ layout: document
         DOM handling, CSS selector, JSON, Canvas, and SVG.<br></a>
       </p>
       <p class="action">
-        <a href="https://github.com/ariya/phantomjs/archive/master.zip" class="btn-download">Download <span class="version">v2.1</span></a>
-        <a href="{{ site.url }}/download.html">Get older stable</a>
+        <a href="https://github.com/ariya/phantomjs/archive/master.zip" class="btn-download">Download <span class="version">v2.1.2</span></a>
+        <a href="{{ site.url }}/download.html">Get 2.1 stable</a>
       </p>
     </div>
 
