--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@ layout: document
         DOM handling, CSS selector, JSON, Canvas, and SVG.<br></a>
       </p>
       <p class="action">
-        <a href="{{ site.url }}/download.2.1" class="btn-download">Download <span class="version">v2.1</span></a>
+        <a href="{{ site.url }}/download.html" class="btn-download">Download <span class="version">v2.1</span></a>
         <a href="https://github.com/ariya/phantomjs/archive/master.zip">Grab latest sources</a>
       </p>
     </div>
