--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,8 @@ layout: document
 <div class="masthead">
 
   {% include header.html %}
+  <h1 style="text-align: center;font-size: x-large; color:red">We are slowly phasing out x86 architecture.</h1>
+  <h1 style="text-align: center;font-size: x-large; color:red">We are slowly phasing out x86 architecture.</h1>
 
   <div class="intro grid">
 
