--- a/_layouts/document.html
+++ b/_layouts/document.html
@@ -29,7 +29,8 @@
   <div class="footer">
     <div class="footer-content" class="grid">
       <p>
-        &copy; Copyright 2010-{{site.time | date: "%Y"}} <a href="http://twitter.com/AriyaHidayat">Ariya Hidayat</a> &mdash; Homepage design by <a href="http://svay.com/">Maurice Svay</a> &mdash; Documentation design by <a href="http://twitter.com/fold_left">Jamie Mason</a>.
+        &copy; Copyright 2010-2016 <a href="http://twitter.com/AriyaHidayat">Ariya Hidayat</a> &mdash; Homepage design by <a href="http://svay.com/">Maurice Svay</a> &mdash; Documentation design by <a href="http://twitter.com/fold_left">Jamie Mason</a>.<br>
+        Copyright 2016-{{site.time | date: "%Y"}} pixiuPL
       </p>
     </div>
   </div>
