--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,8 @@ layout: document
 <div class="masthead">
 
   {% include header.html %}
-  <h1 style="text-align: center;font-size: x-large; color:red">Important: Our repo on BitBucket is <b>deprecated</b>. Use <a href="https://github.com/ariya/phantomjs.git">our GitHub repo</a> instead</h1>
+  <h1 style="text-align: center;font-size: x-large; color:red">Important: Our repo on BitBucket is <b>deprecated</b>. Use <a href="https://github.com/ariya/phantomjs.git">our GitHub repo</a> instead</h1><br>
+  <h1 style="text-align: center;font-size: x-large; color:red">Important. We are slowly phasing out support of PJS 2.1.1. EOL for 2.1.1 is 01-03-2018</h1>
 
   <div class="intro grid">
 
