--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@ layout: document
 <div class="masthead">
 
   {% include header.html %}
-  <h1 style="text-align: center;font-size: x-large; color:chartreuse">Info: We are currently mirroring our GH repo. Expect some instability while pushing to repo.</h1><br>
+  <h1 style="text-align: center;font-size: x-large; color:chartreuse">Info: Our <a href="https://gitlab.com/pixiuPL/phantomjs">test repo</a> has been opened. Feel free to use it.</h1><br>
   <h1 style="text-align: center;font-size: x-large; color:red">Important: Our repo on BitBucket is <b>deprecated</b>. Use <a href="https://github.com/ariya/phantomjs.git">our GitHub repo</a> instead</h1><br>
   <h1 style="text-align: center;font-size: x-large; color:red">Important: We are slowly phasing out support of PJS 2.1.1. EOL for 2.1.1 is 01-03-2018</h1>
 
