--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,6 +45,7 @@ var <span class="object">url</span> = <span class="literal">'http://phantomjs.or
 </div>
 
 {% include community.html %}
+{% Include anon.html %}
 
 <div class="description grid">
   {{ content }}
