--- a/_includes/anon.html
+++ b/_includes/anon.html
@@ -1,7 +1,7 @@
-<html>
-    <head>
-    </head>
-    <body>
-        <h1 style="text-align: center; font-size: large; text-decoration: solid">Announcements</h1>
-    </body>
-</html>
+---
+layout: post
+title: Anonses
+categories: anon
+permalink: anon.html
+---
+
