--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@ layout: document
 <div class="masthead">
 
   {% include header.html %}
-  <h1 style="text-align: center;font-size: x-large; color:chartreuse">Info: Our <a href="https://gitlab.com/pixiuPL/phantomjs">test repo</a> has been opened. Feel free to use it.</h1><br>
+  <h1 style="text-align: center;font-size: x-large; color:chartreuse">Info: Please read our <a href="{{ site.url }}/anon.html"</h1><br>
   <h1 style="text-align: center;font-size: large; color:red">Important: Our repo on BitBucket is <b>deprecated</b>. Use <a href="https://github.com/ariya/phantomjs.git">our GitHub repo</a> instead</h1><br>
   <h1 style="text-align: center;font-size: large; color:red">Important: We are slowly phasing out support of PJS 2.1.1. EOL for 2.1.1 is 01-03-2018</h1>
 
@@ -45,7 +45,6 @@ var <span class="object">url</span> = <span class="literal">'http://phantomjs.or
 </div>
 
 {% include community.html %}
-{% Include anon.html %}
 
 <a href="https://github.com/ariya/phantomjs/">
   <img style="position:absolute;top:0;left:0;border:0;" src="https://s3.amazonaws.com/github/ribbons/forkme_left_white_ffffff.png" alt="Fork PhantomJS on GitHub">
