download button customizations

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@ layout: document
         DOM handling, CSS selector, JSON, Canvas, and SVG.<br></a>
       </p>
       <p class="action">
-        <a href="{{ site.url }}/download.html" class="btn-download">Download <span class="version">v2.1.3</span></a>
+        <a href="{{ site.url }}/download.html" class="btn-download">Download <span class="version">v2.1.3 <p style="font-size: small">Win/Unix/macOS</p></span></a>
         <a href="https://github.com/ariya/phantomjs/archive/master.zip">Grab latest sources</a>
       </p>
     </div>
