--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,8 +22,8 @@ layout: document
         DOM handling, CSS selector, JSON, Canvas, and SVG.<br></a>
       </p>
       <p class="action">
-        <a href="{{ site.url }}/download.html" class="btn-download">Download <span class="version">v2.1.3 <p>Win/Unix/macOS</p></span></a>
-        <a href="https://github.com/ariya/phantomjs/archive/master.zip">Grab latest sources</a>
+        <a href="{{ site.url }}/download.html" class="btn-download">Download 2.1.3</a>
+        <a href="https://github.com/ariya/phantomjs/archive/master.zip" class="btn-download">Download aources from repo</a>
       </p>
     </div>
 
