--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@ layout: document
       </p>
       <p class="action">
         <a href="{{ site.url }}/download.html" class="btn-download">Download 2.1.3</a>
-        <a href="https://github.com/ariya/phantomjs/archive/master.zip" class="btn-download">Download aources from repo</a>
+        <a href="https://github.com/ariya/phantomjs/archive/master.zip" class="btn-download">Download sources from repo</a>
       </p>
     </div>
 
