--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,11 +21,9 @@ layout: document
         It has <strong>fast</strong> and <strong>native</strong> support for various web standards:
         DOM handling, CSS selector, JSON, Canvas, and SVG.<br></a>
       </p>
-      <p class="action">
+    </div class="container">
         <a href="{{ site.url }}/download.html" class="btn-download">Download 2.1.3</a>
         <a href="https://github.com/ariya/phantomjs/archive/master.zip" class="btn-download">Download sources from repo</a>
-      </p>
-    </div>
   </div>
 
 {% include community.html %}
