--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,23 +9,26 @@ layout: document
   <h1 style="text-align: center;font-size: large; color:red">Important: Our repo on BitBucket is <b>deprecated</b>. Use <a href="https://github.com/ariya/phantomjs.git">our GitHub repo</a> instead</h1><br>
   <h1 style="text-align: center;font-size: large; color:red">Important: We are slowly phasing out support of PJS 2.1.1. EOL for 2.1.1 is 01-03-2018</h1>
 
-  <div class="intro grid">
-
-    <div class="grid_7 alpha">
-      <h1>
-        Full web stack<br>
-        No browser required
-      </h1>
-      <p class="explanation">
-        PhantomJS is a headless WebKit scriptable with a JavaScript API.
-        It has <strong>fast</strong> and <strong>native</strong> support for various web standards:
-        DOM handling, CSS selector, JSON, Canvas, and SVG.<br></a>
-      </p>
-    </div class="container">
-        <a href="{{ site.url }}/download.html" class="btn-download">Download 2.1.3</a>
-        <a href="https://github.com/ariya/phantomjs/archive/master.zip" class="btn-download">Download sources from repo</a>
-  </div>
-
+      <div class="container">
+        <div class="row">
+          <div class="col-sm">
+              Full web stack<br>
+              No browser required
+          </div>
+           <div class="col-sm">
+              PhantomJS is a headless WebKit scriptable with a JavaScript API.
+              It has <strong>fast</strong> and <strong>native</strong> support for various web standards:
+              DOM handling, CSS selector, JSON, Canvas, and SVG.<br></a>
+           </div>
+           <div class="col-sm">
+            <a href="{{ site.url }}/download.html" class="btn-download">Download 2.1.3</a>
+           </div>
+           <div class="col-sm">
+            <a href="https://github.com/ariya/phantomjs/archive/master.zip" class="btn-download">Download sources from repo</a>
+          </div>
+        </div>
+      </div>
+    
 {% include community.html %}
 
 <a href="https://github.com/ariya/phantomjs/">
