--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,8 +4,6 @@
   </a>
   <ul class="nav-main grid_8 omega">
     <li><a href="{{ site.url }}/documentation">Documentation</a></li>
-    <li><a href="{{ site.url }}/api">API</a></li>
-    <li><a href="{{ site.url }}/examples">Examples</a></li>
-    <li><a href="{{ site.url }}/faq">F.A.Q!</a></li>
+    <li><a href="{{ site.url }}/anon">Anouncements</a></li>
   </ul>
 </div>
