--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,6 +2,8 @@
   <a href="{{ site.url }}/" class="grid_4 alpha">
     <img src="{{ site.url }}/img/phantomjs-logo.png" alt="PhantomJS" width="240" height="80">
   </a>
+
+  <!-- Some strange classes overhead -->
   <ul class="nav-main grid_8 omega">
     <li><a href="{{ site.url }}/documentation">Documentation</a></li>
     <li><a href="{{ site.url }}/anon">Anouncements</a></li>
