--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
 
   <!-- Some strange classes overhead -->
   <ul class="nav-main grid_8 omega">
-    <li><a href="{{ site.url }}/documentation">Documentation</a></li>
+    <li><a href="{{ site.url }}/documentation">Docs</a></li>
     <li><a href="{{ site.url }}/anon">Anouncements</a></li>
   </ul>
 </div>
