adding API link

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,5 +7,6 @@
   <ul class="nav-main grid_8 omega">
     <li><a href="{{ site.url }}/documentation">Docs</a></li>
     <li><a href="{{ site.url }}/anon">Anouncements</a></li>
+    <li><a href="{{ site.url }}/api">API</a>
   </ul>
 </div>
