--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
   <!-- Some strange classes overhead -->
   <ul class="nav-main grid_8 omega">
     <li><a href="{{ site.url }}/documentation">Docs</a></li>
-    <li><a href="{{ site.url }}/anon">Anouncements</a></li>
+    <li style="text-decoration-color: red"><a href="{{ site.url }}/anon">Anouncements</a></li>
     <li><a href="{{ site.url }}/api">API</a>
   </ul>
 </div>
