--- a/css/main.css
+++ b/css/main.css
@@ -26,7 +26,7 @@ ol, ul {
   display: list-item;
   text-decoration-style: solid;
   text-decoration-line: underline;
-  font: bold;
+  font-size: x-large;
 }
 
 table {
