--- a/css/main.css
+++ b/css/main.css
@@ -407,14 +407,14 @@ body {
   padding: 0 1em;
   border: 1px solid #004513;
   border-radius: 4px;
-  background: #7da21a;
-  background: -moz-linear-gradient(top, #afe225 0, #7da21a 100%);
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #afe225), color-stop(100%, #7da21a));
-  background: -webkit-linear-gradient(top, #afe225 0, #7da21a 100%);
-  background: -o-linear-gradient(top, #afe225 0, #7da21a 100%);
-  background: -ms-linear-gradient(top, #afe225 0, #7da21a 100%);
-  background: linear-gradient(top, #afe225 0, #7da21a 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#afe225',endColorstr='#7da21a',GradientType=0);
+  background:tan;
+  background: -moz-linear-gradient(top, tan 0, tan 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, tan), color-stop(100%, tan));
+  background: -webkit-linear-gradient(top, #613197 0, tan 100%);
+  background: -o-linear-gradient(top, tan 0, tan 100%);
+  background: -ms-linear-gradient(top, tan 0, tan 100%);
+  background: linear-gradient(top, tan 0, tan 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='tan',endColorstr='tan',GradientType=0);
   font-weight: 700;
   text-shadow: 0 -1px 0 #3d9700;
   -webkit-box-shadow: inset 0 2px 0 0 #def67e, 0px 2px 5px rgba(0, 0, 0, 0.2);
