--- a/css/main.css
+++ b/css/main.css
@@ -416,10 +416,7 @@ body {
   background: linear-gradient(top, tan 0, tan 100%);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='tan',endColorstr='tan',GradientType=0);
   font-weight: 700;
-  text-shadow: 0 -1px 0 tan;
-  -webkit-box-shadow: inset 0 2px 0 0 #def67e, 0px 2px 5px rgba(0, 0, 0, 0.2);
-  -moz-box-shadow: inset 0 2px 0 0 #def67e, 0px 2px 5px rgba(0, 0, 0, 0.2);
-  box-shadow: inset 0 2px 0 0, tan, 0px 2px 5px rgba(0, 0, 0, 0.2); }
+}
 
 .btn-download span {
   font-weight: 400; }
