--- a/css/main.css
+++ b/css/main.css
@@ -2,13 +2,16 @@ a, abbr, acronym, address, applet, article, aside, audio, b, big, blockquote, bo
   border: 0;
   margin: 0;
   padding: 0;
-  font-size: 100%; }
+ }
 
 html, body {
   height: 100%; }
 
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
-  display: block; }
+  display: block;
+  font-size: small;
+  font-family: Courier New, Courier, monospace;
+ }
 
 b, strong {
   font-weight: 700; }
