--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@ a, abbr, acronym, address, applet, article, aside, audio, b, big, blockquote, bo
   border: 0;
   margin: 0;
   padding: 0;
-  font-size: small;
+  font-size: medium;
  }
 
 html, body {
@@ -312,7 +312,7 @@ body {
   background: #e1e0dc;
   color: #43413e;
   text-align: center;
-  font-size: 1.125em;
+  font-size: x-large;
   padding: 1.5em 0; }
 
 .community h2 {
