--- a/css/main.css
+++ b/css/main.css
@@ -310,7 +310,7 @@ body {
 
 .community {
   background: #e1e0dc;
-  height: max-content;
+  height: auto;
   color: #43413e;
   text-align: center;
   font-size: x-large;
