--- a/css/main.css
+++ b/css/main.css
@@ -300,7 +300,7 @@ body {
 
 .nav-main a {
   color: #e1e0dc;
-  text-decoration: none;
+  text-decoration: tomato;
   font-weight: 700;
   text-transform: uppercase;
   margin: 0 1em; }
@@ -310,9 +310,12 @@ body {
 
 .community {
   background: #268bd2;
+  text-shadow: #000;
+  text-transform: capitalize;
   height: auto;
   color: #000;
   text-align: center;
+  font-weight: bold;
   font-size: x-large;
   padding: 1.5em 0; }
 
