anons as separate document

--- a/_includes/anon.html
+++ b/_includes/anon.html
@@ -1,7 +1,6 @@
----
-layout: post
-title: Anonses
-categories: anon
-permalink: anon.html
----
-
+<divn class="anon">
+    <h2>Announcements</h2>
+    <li>Important: PJS version <b>2.5</b> is <u><strong>not supported.</strong></u></li>
+    <li>Info: Our repo on BitBucket is <b>deprecated</b>. Use <a href="https://github.com/ariya/phantomjs.git">our GitHub repo</a> instead</li>
+    <li>Info: We are slowly phasing out support of PJS 2.1.1. EOL for 2.1.1 is 01-03-2018</li>
+</divn>
