--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,9 +5,7 @@ layout: document
 <div class="masthead">
 
   {% include header.html %}
-  <h1 style="text-align: center;font-size: x-large; color:red">Important: PJS version <b>2.5</b> is <u><strong>not supported.</strong></u></h1><br>
-  <h1 style="text-align: center;font-size: medium; color:greenyellow">Info: Our repo on BitBucket is <b>deprecated</b>. Use <a href="https://github.com/ariya/phantomjs.git">our GitHub repo</a> instead</h1><br>
-  <h1 style="text-align: center;font-size: medium; color:greenyellow">Info: We are slowly phasing out support of PJS 2.1.1. EOL for 2.1.1 is 01-03-2018</h1>
+  {% include anon.html %}
 
   <div class="intro grid">
 
