--- a/_includes/anon.html
+++ b/_includes/anon.html
@@ -1,4 +1,5 @@
 <div class="anon">
+    <li>Important: Since version <u>2.1.3</u> we <strong>do not</strong> support dynamic linking</li>
     <li>Important: PJS version <b>2.5</b> is <u><strong>not supported.</strong></u></li>
     <li>Info: Our repo on BitBucket is <b>deprecated</b>. Use <a href="https://github.com/ariya/phantomjs.git">our GitHub repo</a> instead</li>
     <li>Info: We are slowly phasing out support of PJS 2.1.1. EOL for 2.1.1 is <b><u>01-03-2018</u></b></li>
