--- a/css/main.css
+++ b/css/main.css
@@ -319,6 +319,9 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   font-size: large;
 }
+.anon-info{
+  color: greenyellow;
+}
 
 .anon li{
   list-style: none;
